# rust-web-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  auto_build.sh  auto_run.sh  ci_cd.sh  go.mod  main.go
src/: main.rs
static/: app.js  index.html  login.html  register.html  style.css
